# ndmg

./: .buildinfo  .gitignore  README.md  cpac.Dockerfile  genindex.html  index.html  objects.inv  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  updated.Dockerfile
.doctrees/: index.doctree
.doctrees/pipeline/: diffusion.doctree  functional.doctree
.doctrees/tutorials/: funcref.doctree  install.doctree
.github/workflows/: build.yml  checks.yml  static.yml
_sources/: index.rst.txt
docs/: conf.py  diffusion.rst  docker.rst  functional.rst  index.rst  install.rst  license.rst  links.rst  quickstart.rst  requirements.txt  usage.rst
docs/paper/: data.ipynb  discrim.py  discrim_runner.py  figure2.ipynb  figure3.ipynb  figure4.ipynb  index.rst  ipsi-calc.py
docs/paper/data/: diffusion_disc.csv  discrim_results.ods  dwi_ipsi_aal.csv  dwi_ipsi_dkt.csv  dwi_ipsi_hammer.csv  (+4 more)
docs/pipeline/: functional.rst
docs/tutorials/: Overview.ipynb  Presentation.ipynb  Qa_skullstrip.ipynb  Tractography_Directional_Field_QA_Tutorial.ipynb  Tutorial_For_QA_Registration.ipynb  Tutorial_of_QA_for_FAST.ipynb  funcref.rst  install.rst
m2g/: __init__.py  graph.py  preproc.py  register.py  track.py
m2g/functional/: __init__.py  m2g_func.py
m2g/scripts/: __init__.py  m2g_bids.py  m2g_cloud.py  m2g_dwi_pipeline.py
m2g/stats/: __init__.py  qa_fast.py  qa_reg.py  qa_skullstrip.py  qa_tensor.py  qa_tractography.py
m2g/utils/: cloud_utils.py  gen_utils.py  qa_utils.py  reg_utils.py
pipeline/: diffusion.html  functional.html
tutorials/: funcref.html  install.html
(+20 files in other folders)
