[metadata]
name = m2g
version = 1.0.0

description = Neuro Data MRI to Graphs Pipeline
long_description = file: README.md
long_description_content_type = text/markdown
author = neurodata
author_email = support@neurodata.io
url = https://github.com/neurodata/m2g
keywords = connectome, mri, pipeline
license = Polyform Noncommercial
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
include_package_data = True
python_requires = >=3.8, <3.11
install_requires =
    awscli==1.29.54
    boto3==1.28.4
    dipy==1.7.0
    fury==0.9.0
    graspologic==3.3.0
    networkx==3.1
    nibabel==5.1.0
    nilearn==0.10.0
    matplotlib==3.7.1
    pybids==0.15.6

[options.entry_points]
console_scripts =
    m2g = m2g.scripts.m2g_bids:main
    m2g_dwi_pipeline = m2g.scripts.m2g_dwi_pipeline:main
    m2g_cloud = m2g.scripts.m2g_cloud:main

[options.package_data]
templates = *.json

[options.packages.find]
exclude =
    tests

[options.extras_require]
dev =
    black
    ipykernel>=5.1.0
    ipython>=7.4.0,!=8.7.0 # https://github.com/spatialaudio/nbsphinx/issues/687#issuecomment-1339271312
    isort>=5.9.3
    nbsphinx>=0.8.7
    numpydoc>=1.1.0
    pandoc>=1.1.0
    sphinx>=4.2.0
    sphinxcontrib-rawfiles>=0.1.1
    sphinx-rtd-theme>=1.0.0
